--- a/request-trip.html
+++ b/request-trip.html
@@ -130,8 +130,12 @@
                                                     <div class="form-group mb-1">
                                                         <label for="exampleInputEmail1"
                                                             class="lable-size text-uppercase">Guest</label>
-                                                        <input type="text" class="form-control input-style shadow-sm"
-                                                            id="exampleInputEmail1" aria-describedby="emailHelp">
+                                                            <select class="form-control lable-size input-style shadow-sm" style="height: 38px;" >
+                                                                <option selected style="font-size: 1em !important;">Adult</option>
+                                                                <option>...</option>
+                                                              </select>
+                                                        <!-- <input type="text" class="form-control input-style shadow-sm"
+                                                            id="exampleInputEmail1" aria-describedby="emailHelp"> -->
                                                     </div>
                                                 </div>
                                             </div>
@@ -193,12 +197,12 @@
                                                       <h6 class="color-2 lable-size mt-2 text-uppercase ">Gender</h6>
                                                     <div class="custom-control custom-radio custom-control-inline">
                                                         <input type="radio" class="custom-control-input"
-                                                            id="customRadio4" name="example" value="customEx">
+                                                            id="customRadio4" name="example1" value="customEx1">
                                                         <label class="custom-control-label radio-label2 color-2"
                                                             for="customRadio4">Male</label>
                                                     </div>
                                                     <div class="custom-control custom-radio custom-control-inline">
-                                                        <input type="radio" class="custom-control-input" id="customRadio5" name="example" value="customEx">
+                                                        <input type="radio" class="custom-control-input" id="customRadio5" name="example1" value="customEx1">
                                                         <label class="custom-control-label radio-label2 color-2" for="customRadio5">Female</label>
                                                       </div>
                                                 </div>
