--- a/trip-offer.html
+++ b/trip-offer.html
@@ -20,11 +20,11 @@
             <div class="row">
                 <div class="col-md-2 shadow-sm" id="col1" style="transition: ease-in 0.7s;">
                     <div class="sidebar">
-                        <img src="images/logo.png" class="img-fluid mt-3 ml-md-2" width="60">
+                        <a href="index.html"> <img src="images/logo.png" class="img-fluid mt-3 ml-md-2" width="60"></a>
                         <a href="dashboard.html" class="text-decoration-none">
-                            <div class="row">
+                            <div class="row m-dash">
                                 <div class="col-12">
-                                    <h6 class="mt-5 pt-5 text-dash text-uppercase ml-3"><span class="box mr-2"><i
+                                    <h6 class=" text-dash text-uppercase ml-3"><span class="box mr-2"><i
                                                 class="fas fa-qrcode"></i></span> Dashboard</h6>
                                 </div>
                             </div>
@@ -101,7 +101,7 @@
                     <img src="images/holiday-in-istanbul-1.png" class="img-fluid w-100">
                     <!-- ====================main row===================== -->
                     <div class="container mb-5">
-                    <div class="row mt-5">
+                    <div class="row mt-4">
                         <div class="col-md-7">
                             <img src="images/maop.png" class="img-fluid">
                             <div class="row">
@@ -119,13 +119,13 @@
                                 <div class="col-md-12">
                                     <div class="card shadow-sm">
                                         <div class="card-body p-2">
-                                            <div class="row">
-                                                <div class="col-md-2">
+                                            <div class="row pb-2 pb-md-0">
+                                                <div class="col-2">
                                                     <div class="text-center">
-                                                    <img src="images/img 1.png" class="img-fluid" width="50">
+                                                    <img src="images/img 1.png" class="img-fluid mt-3 mt-md-0" width="50">
                                                 </div>
                                                 </div>
-                                                <div class="col-md-4 pl-0 mt-3 mt-md-0">
+                                                <div class="col-3 col-md-4  pl-0 mt-3 mt-md-0">
                                                     <div class="left-center">
                                                     <h6 class="heading2 font-weight-bold text-muted">Trip Name  
                                                         <br>
@@ -141,7 +141,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-6 mt-3 mt-md-0">
+                                                <div class="col-7 col-md-6  mt-3 mt-md-0">
                                                     <h6 class="right-center text-muted font-weight-bold">$700</h6>
                                                     <div class="right-center">
                                                         <button class="btn btn-accept">Accept</button>
@@ -159,13 +159,13 @@
                                 <div class="col-md-12">
                                     <div class="card shadow-sm">
                                         <div class="card-body p-2">
-                                            <div class="row">
-                                                <div class="col-md-2">
+                                            <div class="row pb-2 pb-md-0">
+                                                <div class="col-2">
                                                     <div class="text-center">
-                                                    <img src="images/img 1.png" class="img-fluid" width="50">
+                                                    <img src="images/img 1.png" class="img-fluid mt-3 mt-md-0" width="50">
                                                 </div>
                                                 </div>
-                                                <div class="col-md-4 pl-0 mt-3 mt-md-0">
+                                                <div class="col-3 col-md-4  pl-0 mt-3 mt-md-0">
                                                     <div class="left-center">
                                                     <h6 class="heading2 font-weight-bold text-muted">Trip Name  
                                                         <br>
@@ -181,7 +181,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-6 mt-3 mt-md-0">
+                                                <div class="col-7 col-md-6  mt-3 mt-md-0">
                                                     <h6 class="right-center text-muted font-weight-bold">$700</h6>
                                                     <div class="right-center">
                                                         <button class="btn btn-accept">Accept</button>
@@ -199,13 +199,13 @@
                                 <div class="col-md-12">
                                     <div class="card shadow-sm">
                                         <div class="card-body p-2">
-                                            <div class="row">
-                                                <div class="col-md-2">
+                                            <div class="row pb-2 pb-md-0">
+                                                <div class="col-2">
                                                     <div class="text-center">
-                                                    <img src="images/img 1.png" class="img-fluid" width="50">
+                                                    <img src="images/img 1.png" class="img-fluid mt-3 mt-md-0" width="50">
                                                 </div>
                                                 </div>
-                                                <div class="col-md-4 pl-0 mt-3 mt-md-0">
+                                                <div class="col-3 col-md-4  pl-0 mt-3 mt-md-0">
                                                     <div class="left-center">
                                                     <h6 class="heading2 font-weight-bold text-muted">Trip Name  
                                                         <br>
@@ -221,7 +221,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-6 mt-3 mt-md-0">
+                                                <div class="col-7 col-md-6  mt-3 mt-md-0">
                                                     <h6 class="right-center text-muted font-weight-bold">$700</h6>
                                                     <div class="right-center">
                                                         <button class="btn btn-accept">Accept</button>
@@ -239,13 +239,13 @@
                                 <div class="col-md-12">
                                     <div class="card shadow-sm">
                                         <div class="card-body p-2">
-                                            <div class="row">
-                                                <div class="col-md-2">
+                                            <div class="row pb-2 pb-md-0">
+                                                <div class="col-2">
                                                     <div class="text-center">
-                                                    <img src="images/img 1.png" class="img-fluid" width="50">
+                                                    <img src="images/img 1.png" class="img-fluid mt-3 mt-md-0" width="50">
                                                 </div>
                                                 </div>
-                                                <div class="col-md-4 pl-0 mt-3 mt-md-0">
+                                                <div class="col-3 col-md-4  pl-0 mt-3 mt-md-0">
                                                     <div class="left-center">
                                                     <h6 class="heading2 font-weight-bold text-muted">Trip Name  
                                                         <br>
@@ -261,7 +261,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-6 mt-3 mt-md-0">
+                                                <div class="col-7 col-md-6  mt-3 mt-md-0">
                                                     <h6 class="right-center text-muted font-weight-bold">$700</h6>
                                                     <div class="right-center">
                                                         <button class="btn btn-accept">Accept</button>
@@ -279,13 +279,13 @@
                                 <div class="col-md-12">
                                     <div class="card shadow-sm">
                                         <div class="card-body p-2">
-                                            <div class="row">
-                                                <div class="col-md-2">
+                                            <div class="row pb-2 pb-md-0">
+                                                <div class="col-2">
                                                     <div class="text-center">
-                                                    <img src="images/img 1.png" class="img-fluid" width="50">
+                                                    <img src="images/img 1.png" class="img-fluid mt-3 mt-md-0" width="50">
                                                 </div>
                                                 </div>
-                                                <div class="col-md-4 pl-0 mt-3 mt-md-0">
+                                                <div class="col-3 col-md-4  pl-0 mt-3 mt-md-0">
                                                     <div class="left-center">
                                                     <h6 class="heading2 font-weight-bold text-muted">Trip Name  
                                                         <br>
@@ -301,7 +301,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-6 mt-3 mt-md-0">
+                                                <div class="col-7 col-md-6  mt-3 mt-md-0">
                                                     <h6 class="right-center text-muted font-weight-bold">$700</h6>
                                                     <div class="right-center">
                                                         <button class="btn btn-accept">Accept</button>
@@ -319,13 +319,13 @@
                                 <div class="col-md-12">
                                     <div class="card shadow-sm">
                                         <div class="card-body p-2">
-                                            <div class="row">
-                                                <div class="col-md-2">
+                                            <div class="row pb-2 pb-md-0">
+                                                <div class="col-2">
                                                     <div class="text-center">
-                                                    <img src="images/img 1.png" class="img-fluid" width="50">
+                                                    <img src="images/img 1.png" class="img-fluid mt-3 mt-md-0" width="50">
                                                 </div>
                                                 </div>
-                                                <div class="col-md-4 pl-0 mt-3 mt-md-0">
+                                                <div class="col-3 col-md-4  pl-0 mt-3 mt-md-0">
                                                     <div class="left-center">
                                                     <h6 class="heading2 font-weight-bold text-muted">Trip Name  
                                                         <br>
@@ -341,7 +341,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-6 mt-3 mt-md-0">
+                                                <div class="col-7 col-md-6  mt-3 mt-md-0">
                                                     <h6 class="right-center text-muted font-weight-bold">$700</h6>
                                                     <div class="right-center">
                                                         <button class="btn btn-accept">Accept</button>
@@ -359,13 +359,13 @@
                                 <div class="col-md-12">
                                     <div class="card shadow-sm">
                                         <div class="card-body p-2">
-                                            <div class="row">
-                                                <div class="col-md-2">
+                                            <div class="row pb-2 pb-md-0">
+                                                <div class="col-2">
                                                     <div class="text-center">
-                                                    <img src="images/img 1.png" class="img-fluid" width="50">
+                                                    <img src="images/img 1.png" class="img-fluid mt-3 mt-md-0" width="50">
                                                 </div>
                                                 </div>
-                                                <div class="col-md-4 pl-0 mt-3 mt-md-0">
+                                                <div class="col-3 col-md-4  pl-0 mt-3 mt-md-0">
                                                     <div class="left-center">
                                                     <h6 class="heading2 font-weight-bold text-muted">Trip Name  
                                                         <br>
@@ -381,7 +381,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-6 mt-3 mt-md-0">
+                                                <div class="col-7 col-md-6  mt-3 mt-md-0">
                                                     <h6 class="right-center text-muted font-weight-bold">$700</h6>
                                                     <div class="right-center">
                                                         <button class="btn btn-accept">Accept</button>
