--- a/my-trip.html
+++ b/my-trip.html
@@ -20,11 +20,11 @@
             <div class="row">
                 <div class="col-md-2 shadow-sm" id="col1" style="transition: display ease-in-out 0.7s;">
                     <div class="sidebar">
-                        <img src="images/logo.png" class="img-fluid mt-3 ml-md-2" width="60">
+                        <a href="index.html"> <img src="images/logo.png" class="img-fluid mt-3 ml-md-2" width="60"></a>
                         <a href="dashboard.html" class="text-decoration-none">
-                            <div class="row">
+                            <div class="row m-dash">
                                 <div class="col-12">
-                                    <h6 class="mt-5 pt-5 text-dash text-uppercase ml-3"><span class="box mr-2"><i
+                                    <h6 class=" text-dash text-uppercase ml-3"><span class="box mr-2"><i
                                                 class="fas fa-qrcode"></i></span> Dashboard</h6>
                                 </div>
                             </div>
@@ -114,7 +114,7 @@
                                 <button class="hero1 mt-5 text-uppercase" onclick="hideElementPas()">past</button>
                             </div>
                             <div class="col-sm-2dot4 col-6">
-                                <button class="hero1 mt-5 text-uppercase" onclick="hideElementSav()">saved</button>
+                                <button class="hero1 mt-5 text-uppercase" onclick="hideElementSav()">requested</button>
                             </div>
                         </div>
                         <div class="row mt-3 mt-md-0">
